--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "ra-data-fakerest": "^5.8.3",
+    "ra-data-json-server": "^5.8.3",
+    "ra-data-simple-rest": "^5.8.2",
     "react": "^19.0.0",
+    "react-admin": "^5.8.3",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0"
