--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-admin": "^5.8.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.57.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0"
   },
