--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "papaparse": "^5.5.3",
     "ra-data-fakerest": "^5.8.3",
     "ra-data-json-server": "^5.8.3",
     "ra-data-simple-rest": "^5.8.4",
@@ -34,7 +36,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.0.3",
+    "@types/papaparse": "^5.3.16",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
