--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.57.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
