--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-hook-form": "7.57.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -44,6 +45,7 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "@types/react-transition-group": "^4.4.12",
+    "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "esbuild": "^0.25.4",
     "eslint": "^9.22.0",
