--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "leaflet": "^1.9.4",
     "papaparse": "^5.5.3",
     "ra-data-fakerest": "^5.8.3",
     "ra-data-json-server": "^5.8.3",
@@ -31,6 +32,7 @@
     "react-admin": "^5.8.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.57.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^3.3.0",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/file-saver": "^2.0.7",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.0.3",
     "@types/papaparse": "^5.3.16",
     "@types/prop-types": "^15.7.14",
